# basehanja

./: Cargo.toml  LICENSE.md  README.md
examples/: cli.rs  gen_table.rs  interactive.rs
src/: encoding.rs  lib.rs  repack.rs
src/encoding/: config.rs
