[package]
name = "basehanja"
version = "0.1.0"
authors = ["Neculai Balaban <neculai.balaban@outlook.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.73"